--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <title>랜딩페이지</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css">
-    
+
   </head>
   <body>
     <header class="header">
         <div class="header-container">
             <h1 class="header-logo">
                 호두 소개 페이지
-                <a href="home" aria-label="홈으로 이동">HODU</a>
+                <a href="home" aria-label="홈으로 이동">
+                    <img src="./images/logo.png" alt="호두 로고 이미지">
+                </a>
             </h1>
             <nav class="header-nav" aria-label="주 메뉴">
                 <a href="#home" class="header-nav-link">Home</a>
                 <a href="" class="header-nav-link">About</a>
                 <a href="" class="header-nav-link">Support</a>
                 <button class="header-download-btn" aria-label="다운로드">Download</button>
-                <button class="header-menu-btn" aria-label="메뉴 열기"></button>
+                <button class="header-menu-btn" aria-label="메뉴 열기">
+                    <img src="./images/menu.svg" alt="메뉴 버튼 이미지">
+                </button>
             </nav>
         </div>
     </header>
