--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <section class="hero" id="home">
             <div class="hero-container">
                 <div class="hero-content">
-                    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
+                    <h2>Lorem Ipsum is simply dummy text of the printing and</h2>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique quasi facere dolores dolorem aperiam quibusdam provident.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     </p>
                     <button class="hero-download-btn">Download</button>
                 </div>
@@ -74,22 +74,24 @@
                         <img src="images/bed-cat.jpg" alt="침대의 고양이">
                     </figure>
                 </div>
-
-                <p class="info-footer-text">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    Ipsum is simply dummy text of the printing and typesetting industry
-                </p>
-                <button class="info-learn-btn">Learn More</button>
+                <div class="feature-footer">
+                    <p class="feature-footer-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        Ipsum is simply dummy text of the printing and typesetting industry
+                    </p>
+                    <button class="feature-learn-btn">Learn More</button>
+                </div>
             </div>
         </section>
         <section class="subscribe">
             <div class="subscribe-container">
-                <h2 class="subscribe-title">Subscribe to our Blog post</h2>
-                <p class="subscribe-description">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text
-                </p>
+                <div class="subscribe-text">
+                    <h2 class="subscribe-title">Subscribe to our Blog post</h2>
+                    <p class="subscribe-description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+                    </p>
+                </div>
                 <form class="subscribe-form" aria-label="이메일 구독 양식">
                     <input 
                         type="email" 
@@ -108,12 +110,22 @@
     </main>
     <footer class="footer">
         <div class="footer-container">
-            <h2 class="footer-logo">HODU</h2>
+            <h2 class="footer-logo">
+                <img src="./images/logo.svg" alt="호두 로고 이미지">
+            </h2>
             <div class="footer-social" role="list" aria-label="소셜 미디어 링크">
-                <a href="" class="footer-social-link" aria-label="Twitter" role="listitem">T</a>
-                <a href="" class="footer-social-link" aria-label="Instagram" role="listitem">I</a>
-                <a href="" class="footer-social-link" aria-label="Facebook" role="listitem">F</a>
-                <a href="" class="footer-social-link" aria-label="YouTube" role="listitem">Y</a>
+                <a href="" class="footer-social-link" aria-label="blog" role="listitem">
+                    <img src="./images/blog.svg" alt="블로그 아이콘">
+                </a>
+                <a href="" class="footer-social-link" aria-label="Instagram" role="listitem">
+                    <img src="./images/instagram.svg" alt="인스타그램 아이콘">
+                </a>
+                <a href="" class="footer-social-link" aria-label="Facebook" role="listitem">
+                    <img src="./images/facebook.svg" alt="페이스북 아이콘">
+                </a>
+                <a href="" class="footer-social-link" aria-label="YouTube" role="listitem">
+                    <img src="./images/youtube.svg" alt="유튜브 아이콘">
+                </a>
             </div>
         </div>
     </footer>
