scroll-top 버튼 완성

--- a/index.html
+++ b/index.html
@@ -127,7 +127,20 @@
                     <img src="./images/youtube.svg" alt="유튜브 아이콘">
                 </a>
             </div>
+            <nav class="footer__nav" aria-label="하단 메뉴">
+                <a href="#about" class="footer__link">About</a>
+                <a href="#blog" class="footer__link">Blog</a>
+                <a href="#support" class="footer__link">Support</a>
+                <a href="#terms" class="footer__link">Terms of Use</a>
+            </nav>
         </div>
     </footer>
+
+    <button class="scroll-top-btn" aria-label="맨 위로 이동">
+        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12.35 25.6833L20 18.0499L27.65 25.6833L30 23.3333L20 13.3333L10 23.3333L12.35 25.6833Z" fill="#C4C4C4" class="scroll-top-img"/>
+        </svg>
+    </button>
+
   </body>
 </html>
