태블릿, 모바일 버전완성

--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
         </section>
         <section class="feature-02">
             <div class="feature-02-container">
-                <h2 class="feature-02-title">dummy text of the printing and dummy</h2>
-                <p class="feature-02-description">
-                    Lorem Ipsum is simply <span class="feature-02-highlight">dummy text</span> of the printing and typesetting industry.<br>
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                <div class="feature-header">
+                    <h2 class="feature-02-title">dummy text of the printing and dummy</h2>
+                    <p class="feature-02-description">
+                        Lorem Ipsum is simply <span class="feature-02-highlight">dummy text</span> of the printing and typesetting industry.<br>
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                 </p>
+                </div>
 
                 <div class="feature-02-grid">
                     <figure class="feature-02card">
@@ -110,28 +112,30 @@
     </main>
     <footer class="footer">
         <div class="footer-container">
-            <h2 class="footer-logo">
-                <img src="./images/logo.svg" alt="호두 로고 이미지">
-            </h2>
-            <div class="footer-social" role="list" aria-label="소셜 미디어 링크">
-                <a href="" class="footer-social-link" aria-label="blog" role="listitem">
-                    <img src="./images/blog.svg" alt="블로그 아이콘">
-                </a>
-                <a href="" class="footer-social-link" aria-label="Instagram" role="listitem">
-                    <img src="./images/instagram.svg" alt="인스타그램 아이콘">
-                </a>
-                <a href="" class="footer-social-link" aria-label="Facebook" role="listitem">
-                    <img src="./images/facebook.svg" alt="페이스북 아이콘">
-                </a>
-                <a href="" class="footer-social-link" aria-label="YouTube" role="listitem">
-                    <img src="./images/youtube.svg" alt="유튜브 아이콘">
-                </a>
+            <div class="footer-left">
+                <h2 class="footer-logo">
+                    <img src="./images/logo.svg" alt="호두 로고 이미지">
+                </h2>
+                <div class="footer-social" role="list" aria-label="소셜 미디어 링크">
+                    <a href="" class="footer-social-link" aria-label="blog" role="listitem">
+                        <img src="./images/blog.svg" alt="블로그 아이콘">
+                    </a>
+                    <a href="" class="footer-social-link" aria-label="Instagram" role="listitem">
+                        <img src="./images/instagram.svg" alt="인스타그램 아이콘">
+                    </a>
+                    <a href="" class="footer-social-link" aria-label="Facebook" role="listitem">
+                        <img src="./images/facebook.svg" alt="페이스북 아이콘">
+                    </a>
+                    <a href="" class="footer-social-link" aria-label="YouTube" role="listitem">
+                        <img src="./images/youtube.svg" alt="유튜브 아이콘">
+                    </a>
+                </div>
             </div>
-            <nav class="footer__nav" aria-label="하단 메뉴">
-                <a href="#about" class="footer__link">About</a>
-                <a href="#blog" class="footer__link">Blog</a>
-                <a href="#support" class="footer__link">Support</a>
-                <a href="#terms" class="footer__link">Terms of Use</a>
+            <nav class="footer-nav" aria-label="하단 메뉴">
+                <a href="" class="footer-link">About</a>
+                <a href="" class="footer-link">Blog</a>
+                <a href="" class="footer-link">Support</a>
+                <a href="" class="footer-link">Terms of Use</a>
             </nav>
         </div>
     </footer>
@@ -142,5 +146,16 @@
         </svg>
     </button>
 
+    <aside class="mobile-menu" id="mobileMenu">
+        <button class="mobile-menu-close" aria-label="메뉴 닫기">
+            <img src="./images/arrow-right.svg" alt="닫기 화살표">
+        </button>
+        <nav class="mobile-menu-nav" aria-label="모바일 메뉴">
+            <a href="" class="mobile-menu-link">Home</a>
+            <a href="" class="mobile-menu-link">About</a>
+            <a href="" class="mobile-menu-link">Support</a>
+            <button class="mobile-menu-download-btn">Download</button>
+        </nav>
+    </aside>
   </body>
 </html>
