모달 창 완성

--- a/index.html
+++ b/index.html
@@ -157,5 +157,16 @@
             <button class="mobile-menu-download-btn">Download</button>
         </nav>
     </aside>
+
+    <div class="modal">
+        <div class="modal-container">
+            <figure class="modal-cat-image">
+                <img src="./images/cat-subscribe.png" alt="고양이 얼굴 이미지">
+            </figure>
+            <h2 class="modal-title">Thank you!</h2>
+            <p class="modal-text">Lorem Ipsum is simply dummy text of the printing industry.</p>
+            <button class="modal-close-btn">OK! I Love HODU</button>
+        </div>
+    </div>
   </body>
 </html>
