--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <body>
     <header class="header">
         <div class="header-container">
-            <h1 class="header-logo">
-                호두 소개 페이지
-                <a href="home" aria-label="홈으로 이동">
-                    <img src="./images/logo.png" alt="호두 로고 이미지">
+            <h1 class="sr-only">호두(HODU) 소개 랜딩페이지</h1>
+
+            <div class="header-logo">
+                <a href="#home" aria-label="홈으로 이동">
+                    <img src="./images/logo.png" alt="HODU 로고">
                 </a>
-            </h1>
+            </div>
             <nav class="header-nav" aria-label="주 메뉴">
                 <a href="#home" class="header-nav-link">Home</a>
                 <a href="" class="header-nav-link">About</a>
@@ -113,10 +114,10 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-left">
-                <h2 class="footer-logo">
-                    <img src="./images/logo.svg" alt="호두 로고 이미지">
-                </h2>
-                <div class="footer-social" role="list" aria-label="소셜 미디어 링크">
+                <div class="footer-logo">
+                    <img src="./images/logo.svg" alt="HODU 로고">
+                </div>
+                <div class="footer-social" aria-label="소셜 미디어 링크">
                     <a href="" class="footer-social-link" aria-label="blog" role="listitem">
                         <img src="./images/blog.svg" alt="블로그 아이콘">
                     </a>
