subscribe 섹션 이메일 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     </p>
                 </div>
                 <form class="subscribe-form" aria-label="이메일 구독 양식">
+                    <img src="./images/mail.svg" alt="" class="subscribe-mail-icon" />
                     <input 
                         type="email" 
                         class="subscribe-input" 
