리드미 최종

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <h1 class="sr-only">호두(HODU) 소개 랜딩페이지</h1>
 
             <div class="header-logo">
-                <a href="#home" aria-label="홈으로 이동">
+                <a href="#home" >
                     <img src="./images/logo.png" alt="HODU 로고">
                 </a>
             </div>
             <nav class="header-nav" aria-label="주 메뉴">
                 <a href="#home" class="header-nav-link">Home</a>
-                <a href="" class="header-nav-link">About</a>
-                <a href="" class="header-nav-link">Support</a>
-                <button class="header-download-btn" aria-label="다운로드">Download</button>
-                <button class="header-menu-btn" aria-label="메뉴 열기">
+                <a href="#about" class="header-nav-link">About</a>
+                <a href="#support" class="header-nav-link">Support</a>
+                <button type="button" class="header-download-btn" aria-label="다운로드">Download</button>
+                <button type="button"class="header-menu-btn" aria-label="메뉴 열기">
                     <img src="./images/menu.svg" alt="메뉴 버튼 이미지">
                 </button>
             </nav>
@@ -38,7 +38,7 @@
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     </p>
-                    <button class="hero-download-btn">Download</button>
+                    <button type="button" class="hero-download-btn">Download</button>
                 </div>
                 <figure class="hero-image">
                     <img src="./images/box-cat.png" alt="상자를 쓴 고양이">
@@ -83,7 +83,7 @@
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                         Ipsum is simply dummy text of the printing and typesetting industry
                     </p>
-                    <button class="feature-learn-btn">Learn More</button>
+                    <button type="button" class="feature-learn-btn">Learn More</button>
                 </div>
             </div>
         </section>
@@ -118,7 +118,7 @@
                 <div class="footer-logo">
                     <img src="./images/logo.svg" alt="HODU 로고">
                 </div>
-                <div class="footer-social" aria-label="소셜 미디어 링크">
+                <nav class="footer-social" aria-label="소셜 미디어 링크">
                     <a href="" class="footer-social-link" aria-label="blog" role="listitem">
                         <img src="./images/blog.svg" alt="블로그 아이콘">
                     </a>
@@ -131,7 +131,7 @@
                     <a href="" class="footer-social-link" aria-label="YouTube" role="listitem">
                         <img src="./images/youtube.svg" alt="유튜브 아이콘">
                     </a>
-                </div>
+                </nav>
             </div>
             <nav class="footer-nav" aria-label="하단 메뉴">
                 <a href="" class="footer-link">About</a>
@@ -142,21 +142,21 @@
         </div>
     </footer>
 
-    <button class="scroll-top-btn" aria-label="맨 위로 이동">
+    <button type="button" class="scroll-top-btn" aria-label="맨 위로 이동">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12.35 25.6833L20 18.0499L27.65 25.6833L30 23.3333L20 13.3333L10 23.3333L12.35 25.6833Z" fill="#C4C4C4" class="scroll-top-img"/>
         </svg>
     </button>
 
     <aside class="mobile-menu" id="mobileMenu">
-        <button class="mobile-menu-close" aria-label="메뉴 닫기">
+        <button type="button" class="mobile-menu-close" aria-label="메뉴 닫기">
             <img src="./images/arrow-right.svg" alt="닫기 화살표">
         </button>
         <nav class="mobile-menu-nav" aria-label="모바일 메뉴">
             <a href="" class="mobile-menu-link">Home</a>
             <a href="" class="mobile-menu-link">About</a>
             <a href="" class="mobile-menu-link">Support</a>
-            <button class="mobile-menu-download-btn">Download</button>
+            <button type="button" class="mobile-menu-download-btn">Download</button>
         </nav>
     </aside>
 
@@ -167,7 +167,7 @@
             </figure>
             <h2 class="modal-title">Thank you!</h2>
             <p class="modal-text">Lorem Ipsum is simply dummy text of the printing industry.</p>
-            <button class="modal-close-btn">OK! I Love HODU</button>
+            <button type="button" class="modal-close-btn">OK! I Love HODU</button>
         </div>
     </div>
   </body>
